Add some more documentation, add node version files, note .node-version is a symbolic link

--- a/README.org
+++ b/README.org
@@ -30,11 +30,16 @@ You need:
 #+begin_src shell
 nvm use
 #+end_src
+or
+#+begin_src shell
+nodenv local
+#+end_src
+if you use nodenv for version management
 **  Install Yarn
   :PROPERTIES:
   :CUSTOM_ID: installing-yarn
   :END:
-On MacOS you can run ==brew install yarn --ignore-dependencies== to install Yarn, otherwise you can download an installer from [[http://yarnpkg.com/en/docs/install][here]].
+On MacOS you can run =brew install yarn --ignore-dependencies= to install Yarn, otherwise you can download an installer from [[http://yarnpkg.com/en/docs/install][here]].
 Install dependencies
 #+begin_src shell
 yarn install
@@ -43,3 +48,43 @@ or
 #+begin_src shell
 yarn
 #+end_src
+** Build application
+:PROPERTIES:
+:CUSTOM_ID: installing--build-application
+:END:
+#+begin_src shell
+yarn build
+#+end_src
+** Lint
+:PROPERTIES:
+:CUSTOM_ID: installing--lint
+:END:
+#+begin_src shell
+yarn lint
+#+end_src
+to fix your code smell automatically, try
+#+begin_src shell
+yarn lint --fix
+#+end_src
+
+* Running the app server
+:PROPERTIES:
+:CUSTOM_ID: running-server
+:END:
+
+#+name: start server
+#+begin_src shell
+yarn start
+#+end_src
+This will start up a local server and listening on port 8080, serving the compiled code from ./dist
+[[http://127.0.0.1:8080][http://127.0.0.1:8080]]
+Now use your favorite plugin manager like ViolentMonkey or TamperMonkey(GreaseMonkey if you use firefox), point the URL to be your up running server with path
+'/ixa-helper.user.js' if should be automatically recognized as a user script, then head to sengokuixa website and start developing and/or debugging
+* Built With
+:PROPERTIES:
+:CUSTOM_ID: built-with
+:END:
+- NodeJS
+- webpack
+- typescript
+- Yarn
