--- a/README.org
+++ b/README.org
@@ -4,6 +4,9 @@
 #+language: en
 
 * IXA-Helper
+:PROPERTIES:
+:CUSTOM_ID: ixa-helper
+:END:
   NOTE: This file is exported from README.org. Any modifications should also be reflected in that file.
 * Getting started
   :PROPERTIES:
@@ -79,7 +82,7 @@ yarn start
 This will start up a local server and listening on port 8080, serving the compiled code from ./dist
 [[http://127.0.0.1:8080][http://127.0.0.1:8080]]
 Now use your favorite plugin manager like ViolentMonkey or TamperMonkey(GreaseMonkey if you use firefox), point the URL to be your up running server with path
-'/ixa-helper.user.js' if should be automatically recognized as a user script, then head to sengokuixa website and start developing and/or debugging
+'/ixa-helper.user.js' it should be automatically recognized as a user script, then head to sengokuixa website and start developing and/or debugging, enjoy!
 * Built With
 :PROPERTIES:
 :CUSTOM_ID: built-with
