Add upgrade mode display name, fix a typo in readme, disable event of mode selection change when category selection is not made

--- a/README.org
+++ b/README.org
@@ -26,7 +26,7 @@ You need:
   :PROPERTIES:
   :CUSTOM_ID: installing
   :END:
-** Install the vesrion of node being provided (see .nvmrc or .node-version)
+** Install the version of node being provided (see .nvmrc or .node-version)
   :PROPERTIES:
   :CUSTOM_ID: installing--version
   :END:
